--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -1,40 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="library">
 <head>
 <meta charset="UTF-8">
-<title>Landing</title>
+<title>Unknown Worlds</title>
 <link rel="stylesheet" href="lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-<script type="text/javascript" src="lib/angular.min.js "></script>
+<link rel="stylesheet" href="css/Main.css">
 <script type="text/javascript" src="lib/jquery-3.2.1.js "></script>
 <script type="text/javascript" src="lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="lib/angular.min.js "></script>
+<script type="text/javascript" src="js/app.js"></script>
 </head>
 <body data-ng-app="webapp">
 	<div class="container-fluid">
 		<!-- login section, visible by default on opening the page -->
 		<div class="row">
-			<div class="col-xs-2 col-xs-offset-2 ">
-				<img class="img-rounded img-responsive" src="img/logo.png" alt="logo">
-			</div>
-			<div class="col-xs-4">
-				<h2>Unknown Worlds Library</h2>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-6 col-xs-offset-2">
-				<form>
-					<div class="form-group">
-						<label for="exampleInputEmail1">Email address</label> <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-						<div>
-							<label for="exampleInputPassword1">Password</label> <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+			<div class="col-xs-12 col-xs-offset-0 col-sm-6 col-sm-offset-3">
+				<div class="account-wall">
+					<div class="row">
+						<div class="col-xs-4">
+							<img class="img-rounded img-responsive" src="img/logo.png" alt="logo">
 						</div>
-						<div>
-							<button type="submit" class="btn btn-primary">Submit</button>
+						<div class="col-xs-8 text-center">
+							<h2>Unknown Worlds Online Library</h2>
 						</div>
 					</div>
-
-				</form>
+					<div class="row">
+						<div class="col-xs-12">
+							<form>
+								<div class="form-group">
+									<label for="exampleInputEmail1">Email address</label> <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+									<div>
+										<label for="exampleInputPassword1">Password</label> <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+									</div>
+									<div>
+										<button type="submit" class="btn btn-primary">Submit</button>
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
 </body>
 </html>
