--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -14,29 +14,39 @@
 	<div class="container-fluid">
 		<!-- login section, visible by default on opening the page -->
 		<div class="row">
-			<div class="col-xs-12 col-xs-offset-0 col-sm-6 col-sm-offset-3">
+			<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
 				<div class="account-wall">
 					<div class="row">
 						<div class="col-xs-4">
 							<img class="img-rounded img-responsive" src="img/logo.png" alt="logo">
 						</div>
 						<div class="col-xs-8 text-center">
-							<h2>Unknown Worlds Online Library</h2>
+							<h2 style="font-family: Georgia, serif;">Unknown Worlds Online Library</h2>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-xs-12">
-							<form>
-								<div class="form-group">
-									<label for="exampleInputEmail1">Email address</label> <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-									<div>
-										<label for="exampleInputPassword1">Password</label> <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+						<div class="col-xs-8 col-xs-offset-2 text-center">
+							<h3>Please sign in or register to access the library</h3>
+						</div>
+						<div class="row">
+							<div class="col-xs-8 col-xs-offset-2">
+								<form>
+									<div class="form-group">
+										<label for="exampleInputEmail1">Email address</label> <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+										<div>
+											<label for="exampleInputPassword1">Password</label> <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+										</div>
 									</div>
-									<div>
-										<button type="submit" class="btn btn-primary">Submit</button>
-									</div>
-								</div>
-							</form>
+								</form>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-4 col-xs-offset-2 text-center">
+								<button type="submit" class="btn btn-primary">Sing-in</button>
+							</div>
+							<div class="col-xs-4 text-center">
+							<button type="submit" class="btn btn-default">Resister</button>
+							</div>
 						</div>
 					</div>
 				</div>
