--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -11,9 +11,9 @@
 <script type="text/javascript" src="js/app.js"></script>
 </head>
 <body data-ng-app="webapp">
-	<div class="container-fluid">
+	<div class="container-fluid" ng-controller="LandingController as lCtrl">
 		<!-- login section, visible by default on opening the page -->
-		<div class="row">
+		<div class="row" ng-show="lCtrl.userLogin">
 			<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
 				<div class="account-wall">
 					<div class="row">
@@ -40,17 +40,59 @@
 								</form>
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-xs-4 col-xs-offset-2 text-center">
-								<button type="submit" class="btn btn-primary">Sing-in</button>
-							</div>
-							<div class="col-xs-4 text-center">
-							<button type="submit" class="btn btn-default">Resister</button>
-							</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-4 col-xs-offset-2 text-center">
+							<button type="submit" class="btn btn-primary">Sing-in</button>
+						</div>
+						<div class="col-xs-4 text-center">
+							<button type="submit" class="btn btn-default" ng-click="lCtrl.toRegister()">Resister</button>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+
+		<!-- Registration, not visible by default -->
+		<div class="row" ng-show="lCtrl.userRegister">
+			<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
+				<div class="account-wall">
+					<div class="row">
+						<div class="col-xs-4">
+							<img class="img-rounded img-responsive" src="img/logo.png" alt="logo">
+						</div>
+						<div class="col-xs-8 text-center">
+							<h2 style="font-family: Georgia, serif;">Unknown Worlds Online Library</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-8 col-xs-offset-2">
+							<form>
+								<div class="form-group">
+									<div>
+<label for="InputUsername1">Username</label> <input type="text" class="form-control" id="InputUsername1" aria-describedby="username Help" placeholder="Enter Username">
+									</div>
+									<div>
+										<label for="InputEmail1">Email address</label> <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+									</div>
+									<div>
+										<label for="InputPassword1">Password</label> <input type="password" class="form-control" id="InputPassword1" placeholder="Password">
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-4 col-xs-offset-2 text-center">
+							<button type="submit" class="btn btn-primary">Resister</button>
+						</div>
+						<div class="col-xs-4 text-center">
+							<button type="submit" class="btn btn-default" ng-click="lCtrl.toLogin()">Back to Sing-in</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
