--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -70,7 +70,8 @@
 							<form>
 								<div class="form-group">
 									<div>
-<label for="InputUsername1">Username</label> <input type="text" class="form-control" id="InputUsername1" aria-describedby="username Help" placeholder="Enter Username">
+										<label for="InputUsername1">Username</label> <input type="text" class="form-control" id="InputUsername1" placeholder="Enter Username" aria-describedby="info">
+										<p id="info">Test info</p>
 									</div>
 									<div>
 										<label for="InputEmail1">Email address</label> <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
