--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -62,56 +62,147 @@
 							<img class="img-rounded img-responsive" src="img/logo.png" alt="logo">
 						</div>
 						<div class="col-xs-8 text-center">
-							<h2 style="font-family: Georgia, serif;">Unknown Worlds Online Library</h2>
+							<h2 class="Title">Unknown Worlds Library</h2>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-xs-8 col-xs-offset-2">
-							<form>
-								<div class="form-group">
+					<form>
+						<div class="form-group">
+							<div class="row">
+								<div class="col-xs-8 col-xs-offset-2">
+									<div class="auth-fail alert alert-info" role="alert">Please note that cyan text fields are optional.</div>
+								</div>
+
+								<div class="col-xs-8 col-xs-offset-2">
 									<div>
-										<div>
-											<label for="InputUsername1">Username</label> <input type="text" class="form-control" id="InputUsername1" placeholder="Username">
-										</div>
-										<div>
-											<label for="InputEmail1">Email address</label> <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Em@il">
-										</div>
-										<div>
-											<label for="InputAdress1">Address</label> <input type="text" class="form-control" id="InputAdress1" placeholder="Street name">
-										</div>
-										<label for="InputNumber1">Block number</label> <input type="text" class="form-control" id="InputNumber1" placeholder="Block number"> <small>Positive integers only</small><br> <label
-											for="InputCity1"
-										>City name</label> <input type="text" class="form-control" id="InputCity1" placeholder="City name"> <small>English characters only, longer than 3 characters</small><br> <label
-											for="InputZIP1"
-										>ZIP code</label> <input type="text" class="form-control" id="InputZIP1" placeholder="ZIP code"> <small>Has to contain exactly 7 numbers</small><br> <label for="InputPhone1">Phone
-											number</label> <input type="text" class="form-control" id="InputPhone1" placeholder="Phone number"> <small>Valid number example 054-525-47-58 or 046-222-210</small><br> <label
-											for="InputPassword1"
-										>Password</label> <input type="password" class="form-control" id="InputPassword1" placeholder="Password"> <small>Password has to be up to 8 characters</small><br> <label
-											for="InputNickname1"
-										>Nickname</label> <input type="text" class="form-control" id="InputNickname1" placeholder="Nickname"> <small>Password has to be up to 8 characters</small><br> <label
-											for="InputDescription1"
-										>Short description</label> <input type="text" class="form-control" id="InputDescription1" placeholder="Short description"> <small>Password has to be up to 8 characters</small><br> <label
-											for="InputPhotoURL1"
-										>Photo URL</label> <input type="text" class="form-control" id="InputPhotoURL1" placeholder="Photo URL"> <small>Password has to be up to 8 characters</small><br>
-										<div class="auth-fail alert alert-warning" role="alert" ng-hide="lCtrl.authFailureWarningHidden">
-											{{lCtrl.error1}} <br />{{lCtrl.error2}}
-										</div>
+										<label for="InputUsername1">Username</label> <input type="text" class="form-control" id="InputUsername1" placeholder="Username">
+									</div>
+									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newUserNameOk">
+										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.usernameError}}
 									</div>
 								</div>
-							</form>
+							</div>
+
+							<div class="row">
+								<div class="col-xs-8 col-xs-offset-2">
+									<div>
+										<label for="InputEmail1">Email address</label> <input type="email" class="form-control optional" id="InputEmail1" aria-describedby="emailHelp" placeholder="Em@il">
+									</div>
+									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newEmailOk">
+										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.emailerror}}
+									</div>
+								</div>
+							</div>
+
+							<div class="row">
+								<div class="col-xs-8 col-xs-offset-2">
+									<div>
+										<label for="InputAdress1">Address</label> <input type="text" class="form-control optional" id="InputAdress1" placeholder="Street name">
+									</div>
+									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newAdressOk">
+										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.adressError}}
+									</div>
+								</div>
+							</div>
+
+							<div class="row">
+								<div class="col-xs-8 col-xs-offset-2">
+									<div>
+										<label for="InputNumber1">Block number</label> <input type="text" class="form-control optional" id="InputNumber1" placeholder="Block number">
+									</div>
+									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newBlockNumberOk">
+										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.blockError}}
+									</div>
+								</div>
+							</div>
+
+							<div class="row">
+								<div class="col-xs-8 col-xs-offset-2">
+									<div>
+										<label for="InputCity1">City name</label> <input type="text" class="form-control optional" id="InputCity1" placeholder="City name">
+									</div>
+									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newCityOk">
+										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.cityError}}
+									</div>
+								</div>
+							</div>
+
+							<div class="row">
+								<div class="col-xs-8 col-xs-offset-2">
+									<div>
+										<label for="InputZIP1">ZIP code</label> <input type="text" class="form-control optional" id="InputZIP1" placeholder="ZIP code">
+									</div>
+									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newZIPOk">
+										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.zipError}}
+									</div>
+								</div>
+							</div>
+
+							<div class="row">
+								<div class="col-xs-8 col-xs-offset-2">
+									<div>
+										<label for="InputPhone1">Phone number</label> <input type="text" class="form-control optional" id="InputPhone1" placeholder="Phone number">
+									</div>
+									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newPhoneOk">
+										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.phoneError}}
+									</div>
+								</div>
+							</div>
+
+							<div class="row">
+								<div class="col-xs-8 col-xs-offset-2">
+									<div>
+										<label for="InputPassword1">Password</label> <input type="password" class="form-control" id="InputPassword1" placeholder="Password">
+									</div>
+									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newPassOk">
+										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.passError}}
+									</div>
+								</div>
+							</div>
+
+							<div class="row">
+								<div class="col-xs-8 col-xs-offset-2">
+									<div>
+										<label for="InputNickname1">Nickname</label> <input type="text" class="form-control" id="InputNickname1" placeholder="Nickname">
+									</div>
+									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newNickOk">
+										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.nickError}}
+									</div>
+								</div>
+							</div>
+
+							<div class="row">
+								<div class="col-xs-8 col-xs-offset-2">
+									<div>
+										<label for="InputDescription1">Short description</label> <input type="text" class="form-control optional" id="InputDescription1" placeholder="Short description">
+									</div>
+								</div>
+							</div>
+
+							<div class="row">
+								<div class="col-xs-8 col-xs-offset-2">
+									<div>
+										<label for="InputPhotoURL1">Photo URL</label> <input type="text" class="form-control optional" id="InputPhotoURL1" placeholder="Photo URL">
+									</div>
+									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newPhotoOk">
+										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.photoError}}
+									</div>
+								</div>
+							</div>
+
 						</div>
+					</form>
+				</div>
+				<div class="row">
+					<div class="col-xs-4 col-xs-offset-2 text-center">
+						<button type="submit" class="btn btn-primary" ng-click="lCtrl.register()">Resister</button>
 					</div>
-					<div class="row">
-						<div class="col-xs-4 col-xs-offset-2 text-center">
-							<button type="submit" class="btn btn-primary" ng-click="lCtrl.register()">Resister</button>
-						</div>
-						<div class="col-xs-4 text-center">
-							<button type="submit" class="btn btn-default" ng-click="lCtrl.toLogin()">Back to Sing-in</button>
-						</div>
+					<div class="col-xs-4 text-center">
+						<button type="submit" class="btn btn-default" ng-click="lCtrl.toLogin()">Back to Sing-in</button>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 	</div>
 </body>
 </html>
