--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -21,7 +21,7 @@
 							<img class="img-rounded img-responsive" src="img/logo.png" alt="logo">
 						</div>
 						<div class="col-xs-8 text-center">
-							<h2 style="font-family: Georgia, serif;">Unknown Worlds Online Library</h2>
+							<h2 style="font-family: Georgia, serif;">Unknown Worlds Library</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -74,7 +74,7 @@
 
 								<div class="col-xs-8 col-xs-offset-2">
 									<div>
-										<label for="InputUsername1">Username</label> <input type="text" class="form-control" id="InputUsername1" placeholder="Username">
+										<label for="InputUsername1">Username</label> <input type="text" class="form-control" id="InputUsername1" placeholder="Username" data-trigger="hover" data-toggle="popover" data-placement="bottom" title="Test popover" data-content="Some content">
 									</div>
 									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newUserNameOk">
 										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.usernameError}}
@@ -203,6 +203,10 @@
 			</div>
 		</div>
 	</div>
-	</div>
+	<script>
+		$(document).ready(function() {
+			$('[data-toggle="popover"]').popover();
+		});
+	</script>
 </body>
 </html>
