--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -12,48 +12,54 @@
 </head>
 <body data-ng-app="webapp">
 	<div class="container-fluid" ng-controller="LandingController as lCtrl">
+
 		<!-- login section, visible by default on opening the page -->
-		<div class="row" ng-show="lCtrl.userLogin">
-			<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
-				<div class="account-wall">
-					<div class="row">
-						<div class="col-xs-4">
-							<img class="img-rounded img-responsive" src="img/logo.png" alt="logo">
-						</div>
-						<div class="col-xs-8 text-center">
-							<h2 style="font-family: Georgia, serif;">Unknown Worlds Library</h2>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-xs-8 col-xs-offset-2 text-center">
-							<h3>Please sign in or register to access the library</h3>
-						</div>
+		<form name="loginForm" ng-submit="lCtrl.login()" novalidate>
+			<div class="row" ng-show="lCtrl.userLogin">
+				<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
+					<div class="account-wall">
 						<div class="row">
-							<div class="col-xs-8 col-xs-offset-2">
-								<form>
-									<div class="form-group">
-										<label for="exampleInputEmail1">Email address</label> <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-										<div>
-											<label for="exampleInputPassword1">Password</label> <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-										</div>
-									</div>
-								</form>
+							<div class="col-xs-4">
+								<img class="img-rounded img-responsive" src="img/logo.png" alt="logo">
+							</div>
+							<div class="col-xs-8 text-center">
+								<h2 style="font-family: Georgia, serif;">Unknown Worlds Library</h2>
 							</div>
 						</div>
-					</div>
-					<div class="row">
-						<div class="col-xs-4 col-xs-offset-2 text-center">
-							<button type="submit" class="btn btn-primary">Sing-in</button>
+						<div class="row">
+							<div class="col-xs-8 col-xs-offset-2 text-center">
+								<h3>Please sign in or register to access the library</h3>
+							</div>
+							<div class="row">
+								<div class="col-xs-8 col-xs-offset-2">
+									<form>
+										<div class="form-group">
+											<label for="exampleInputEmail1">Email address</label> <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+											<div>
+												<label for="exampleInputPassword1">Password</label> <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
 						</div>
-						<div class="col-xs-4 text-center">
-							<button type="submit" class="btn btn-default" ng-click="lCtrl.toRegister()">Resister</button>
+						<div class="row">
+							<div class="col-xs-4 col-xs-offset-2 text-center">
+								<button type="submit" class="btn btn-primary">Sing-in</button>
+							</div>
+							<div class="col-xs-4 text-center">
+								<button type="submit" class="btn btn-default" ng-click="lCtrl.toRegister()">Resister</button>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+		</form>
+
+
 
 		<!-- Registration, not visible by default -->
+
 		<div class="row" ng-show="lCtrl.userRegister">
 			<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
 				<div class="account-wall">
@@ -65,7 +71,7 @@
 							<h2 class="Title">Unknown Worlds Library</h2>
 						</div>
 					</div>
-					<form>
+					<form ng-submit="registerForm.$valid && lCtrl.register()" name="registerForm" novalidate>
 						<div class="form-group">
 							<div class="row">
 								<div class="col-xs-8 col-xs-offset-2">
@@ -74,7 +80,9 @@
 
 								<div class="col-xs-8 col-xs-offset-2">
 									<div>
-										<label for="InputUsername1">Username</label> <input type="text" class="form-control" id="InputUsername1" placeholder="Username" data-trigger="hover" data-toggle="popover" data-placement="bottom" title="Test popover" data-content="Some content">
+										<label for="InputUsername1">Username</label> <input type="text" class="form-control" id="InputUsername1" placeholder="Username" ng-model="lCtrl.newCustomer.username" data-trigger="hover"
+											data-toggle="popover" data-placement="bottom" title="Popover test" data-content="Some content" required
+										>
 									</div>
 									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newUserNameOk">
 										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.usernameError}}
@@ -85,7 +93,7 @@
 							<div class="row">
 								<div class="col-xs-8 col-xs-offset-2">
 									<div>
-										<label for="InputEmail1">Email address</label> <input type="email" class="form-control optional" id="InputEmail1" aria-describedby="emailHelp" placeholder="Em@il">
+										<label for="InputEmail1">Email address</label> <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Em@il" required ng-model="lCtrl.newCustomer.email">
 									</div>
 									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newEmailOk">
 										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.emailerror}}
@@ -96,7 +104,7 @@
 							<div class="row">
 								<div class="col-xs-8 col-xs-offset-2">
 									<div>
-										<label for="InputAdress1">Address</label> <input type="text" class="form-control optional" id="InputAdress1" placeholder="Street name">
+										<label for="InputAdress1">Address</label> <input type="text" class="form-control" required ng-model="lCtrl.newCustomer.address" id="InputAdress1" placeholder="Street name">
 									</div>
 									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newAdressOk">
 										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.adressError}}
@@ -107,7 +115,7 @@
 							<div class="row">
 								<div class="col-xs-8 col-xs-offset-2">
 									<div>
-										<label for="InputNumber1">Block number</label> <input type="text" class="form-control optional" id="InputNumber1" placeholder="Block number">
+										<label for="InputNumber1">Block number</label> <input type="number" class="form-control" required ng-model="lCtrl.newCustomer.blockNum" id="InputNumber1" placeholder="Block number">
 									</div>
 									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newBlockNumberOk">
 										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.blockError}}
@@ -118,7 +126,7 @@
 							<div class="row">
 								<div class="col-xs-8 col-xs-offset-2">
 									<div>
-										<label for="InputCity1">City name</label> <input type="text" class="form-control optional" id="InputCity1" placeholder="City name">
+										<label for="InputCity1">City name</label> <input type="text" class="form-control" required ng-model="lCtrl.newCustomer.city" id="InputCity1" placeholder="City name">
 									</div>
 									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newCityOk">
 										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.cityError}}
@@ -129,7 +137,7 @@
 							<div class="row">
 								<div class="col-xs-8 col-xs-offset-2">
 									<div>
-										<label for="InputZIP1">ZIP code</label> <input type="text" class="form-control optional" id="InputZIP1" placeholder="ZIP code">
+										<label for="InputZIP1">ZIP code</label> <input type="number" class="form-control" required ng-model="lCtrl.newCustomer.zip" id="InputZIP1" placeholder="ZIP code">
 									</div>
 									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newZIPOk">
 										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.zipError}}
@@ -140,7 +148,7 @@
 							<div class="row">
 								<div class="col-xs-8 col-xs-offset-2">
 									<div>
-										<label for="InputPhone1">Phone number</label> <input type="text" class="form-control optional" id="InputPhone1" placeholder="Phone number">
+										<label for="InputPhone1">Phone number</label> <input type="number" class="form-control" required ng-model="lCtrl.newCustomer.phone" id="InputPhone1" placeholder="Phone number">
 									</div>
 									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newPhoneOk">
 										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.phoneError}}
@@ -151,7 +159,7 @@
 							<div class="row">
 								<div class="col-xs-8 col-xs-offset-2">
 									<div>
-										<label for="InputPassword1">Password</label> <input type="password" class="form-control" id="InputPassword1" placeholder="Password">
+										<label for="InputPassword1">Password</label> <input type="password" class="form-control" id="InputPassword1" placeholder="Password" ng-model="lCtrl.newCustomer.password" required>
 									</div>
 									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newPassOk">
 										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.passError}}
@@ -162,7 +170,7 @@
 							<div class="row">
 								<div class="col-xs-8 col-xs-offset-2">
 									<div>
-										<label for="InputNickname1">Nickname</label> <input type="text" class="form-control" id="InputNickname1" placeholder="Nickname">
+										<label for="InputNickname1">Nickname</label> <input type="text" class="form-control" id="InputNickname1" placeholder="Nickname" ng-model="lCtrl.newCustomer.nickname" required>
 									</div>
 									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newNickOk">
 										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.nickError}}
@@ -173,7 +181,7 @@
 							<div class="row">
 								<div class="col-xs-8 col-xs-offset-2">
 									<div>
-										<label for="InputDescription1">Short description</label> <input type="text" class="form-control optional" id="InputDescription1" placeholder="Short description">
+										<label for="InputDescription1">Short description</label> <input type="text" class="form-control optional" ng-model="lCtrl.newCustomer.description" id="InputDescription1" placeholder="Short description">
 									</div>
 								</div>
 							</div>
@@ -181,7 +189,7 @@
 							<div class="row">
 								<div class="col-xs-8 col-xs-offset-2">
 									<div>
-										<label for="InputPhotoURL1">Photo URL</label> <input type="text" class="form-control optional" id="InputPhotoURL1" placeholder="Photo URL">
+										<label for="InputPhotoURL1">Photo URL</label> <input type="url" class="form-control optional" id="InputPhotoURL1" placeholder="Photo URL" ng-model="lCtrl.newCustomer.photo">
 									</div>
 									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newPhotoOk">
 										<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> {{lCtrl.photoError}}
@@ -194,13 +202,17 @@
 				</div>
 				<div class="row">
 					<div class="col-xs-4 col-xs-offset-2 text-center">
-						<button type="submit" class="btn btn-primary" ng-click="lCtrl.register()">Resister</button>
+						<button type="submit" class="btn btn-primary" ng-click="lCtrl.register()">Register</button>
 					</div>
 					<div class="col-xs-4 text-center">
 						<button type="submit" class="btn btn-default" ng-click="lCtrl.toLogin()">Back to Sing-in</button>
 					</div>
 				</div>
+				<div class="row">
+					<div class="col debug" >Review form is {{registerForm.$valid}}</div>
+				</div>
 			</div>
+
 		</div>
 	</div>
 	<script>
