--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -5,9 +5,10 @@
 <title>Unknown Worlds</title>
 <link rel="stylesheet" href="lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="css/Main.css">
-<script type="text/javascript" src="lib/jquery-3.2.1.js "></script>
+
+<script type="text/javascript" src="lib/jquery-3.2.1.js"></script>
 <script type="text/javascript" src="lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="lib/angular.min.js "></script>
+<script type="text/javascript" src="lib/angular.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 </head>
 <body data-ng-app="webapp">
@@ -15,7 +16,7 @@
 
 		<!-- login section, visible by default on opening the page -->
 		<form id="loginForm" name="loginForm" ng-submit="lCtrl.login()" novalidate>
-			<div class="row" ng-show="lCtrl.userLogin">
+			<div class="row">
 				<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
 					<div class="account-wall">
 						<div class="row">
@@ -60,7 +61,7 @@
 
 		<!-- Registration, not visible by default -->
 
-		<div class="row" id="registrationForm" style="display:none" ng-show="lCtrl.userRegister">
+		<div class="row" id="registrationForm" style="display:none">
 			<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
 				<div class="account-wall">
 					<div class="row">
@@ -71,7 +72,8 @@
 							<h2 class="Title">Unknown Worlds Library</h2>
 						</div>
 					</div>
-					<form ng-submit="registerForm.$valid && lCtrl.register()" name="registerForm" novalidate>
+					<!-- registerForm.$valid && -->
+					<form ng-submit="lCtrl.register()" name="registerForm" novalidate>
 						<div class="form-group">
 							<div class="row">
 								<div class="col-xs-8 col-xs-offset-2">
@@ -80,8 +82,8 @@
 
 								<div class="col-xs-8 col-xs-offset-2">
 									<div>
-										<label for="InputUsername1">Username</label> <input type="text" class="form-control" id="InputUsername1" placeholder="Username" ng-model="lCtrl.newCustomer.username" data-trigger="hover"
-											data-toggle="popover" data-placement="bottom" title="Popover test" data-content="Some content" required
+										<label for="InputUsername1">Username</label> <input type="text" name="InputUsername1" class="form-control" id="InputUsername1" placeholder="Username" ng-model="lCtrl.newCustomer.username" data-trigger="hover"
+											data-toggle="popover" data-placement="bottom" title="English character and/or numbers" data-content="Up to 10" required
 										>
 									</div>
 									<div class="auth-fail alert alert-danger alert-dismissable fade in" role="alert" ng-hide="lCtrl.newUserNameOk">
