Username check and email check

--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -96,7 +96,7 @@
 							<div class="row">
 								<div class="col-xs-8 col-xs-offset-2">
 									<div>
-										<label for="InputEmail1">Email address</label> <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Em@il" required
+										<label for="InputEmail1">Email address</label> <input type="email" name="InputEmail1" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Em@il" required
 											ng-model="lCtrl.newCustomer.email" data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrl.emailerror}}"
 										>
 									</div>
