some more progress

--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -229,7 +229,7 @@
 
     </div>
     <!-- Library begins here -->
-    <div ng-if="navLibrary"> asd </div>
+    <div ng-if="navLibrary"></div>
 
 
   </div>
