--- a/WebContent/inDevelopment/login.html
+++ b/WebContent/inDevelopment/login.html
@@ -29,7 +29,7 @@
 
             <div class="row">
               <div class="col-xs-4 col-xs-offset-2 text-center">
-                <button type="submit" class="btn btn-primary" ng-click="lCtrl.login()">Sing-in</button>
+                <button type="submit" class="btn btn-primary" ng-click="lCtrl.login()">Sing-in <span class="glyphicon glyphicon-log-in"></span></button>
               </div>
               <div class="col-xs-4 text-center">
                 <button type="submit" class="btn btn-default" ng-click="lCtrl.navToRegister()">Register</button>
