--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 <title>Unknown Worlds</title>
 <link rel="stylesheet" href="lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="css/Main.css">
+<link rel="stylesheet" href="css/loader.css">
 
 <script type="text/javascript" src="lib/jquery-3.2.1.js"></script>
 <script type="text/javascript" src="lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
@@ -33,7 +34,7 @@
     <div ng-if="navLibrary" ng-controller="LibController as lib">
       <div class="booklist">
         <div class="row">
-          <div class="col-xs-12 col-xs-offset-0 col-sm-12 col-sm-offset-0">
+          <div class="col-xs-12">
 
             <nav class="navbar navbar-default">
               <div class="container-fluid">
@@ -42,7 +43,7 @@
                   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="#">Brand</a>
+                  <a class="navbar-brand" href="#"><ul class="list-inline"><li><img class="img-rounded" width="32px" src="img/logo.png" alt="logo"> </li><li>Unknown Worlds</li></ul></a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -77,7 +78,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1">
-            <table class="table table-hover">
+            <table class="table table-hover table-striped table-bordered ">
               <tr class="center" ng-show="product.canRead" ng-repeat="product in lib.products">
                 <td><img class="img-thumbnail" style="height:128px;" ng-src="{{product.imageURL}}"></td>
                 <td>
@@ -103,6 +104,23 @@
             </table>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+
+<!-- Loading placeholder -->
+  <div class="container">
+    <div class="row">
+      <div id="loader">
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="lading"></div>
       </div>
     </div>
   </div>
