Added files while trying to start Tomcat and Derby
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -24,6 +24,7 @@
 
     <!-- Temporary removed to ease development - look in the login.html -->
 
+<div ng-if="true" ng-include="navPointer"></div>
 
     <!-- Registration, not visible by default -->
 
@@ -94,7 +95,7 @@
                     count here</div>
                   <div>
                     <button class="btn btn-default" on-click="lib.openreview(product.name)">
-                      Read reviews <span class="glyphicon glyphicon-eye-open"</span>
+                      Read reviews <span class="glyphicon glyphicon-eye-open"></span>
                     </button>
                   </div>
                   <div>
