Finished service for ajax request
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,13 +11,14 @@
 <script type="text/javascript" src="lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="lib/angular.min.js"></script>
 
+<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/comms.js"></script>
 <script type="text/javascript" src="js/controllers.js"></script>
 <script type="text/javascript" src="js/validationFunctions.js"></script>
-
 <script type="text/javascript" src="js/popoverInit.js""></script>
 
 </head>
-<body ng-app="library" ng-controller="LandingController as lCtrl">
+<body ng-app="uwl" ng-controller="LandingController as lCtrl">
   <div class="container-fluid">
 
     <!-- login section, visible by default on opening the page -->
